added source link

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
         <div id="notesContainer"></div>
     </div>
 
+    <footer class="container">
+        <small>Built with ♥ by <a href="https://github.com/xprilion">Anubhav</a> • <a href="https://xprilion.com">xprilion.com</a> • <a href="https://github.com/xprilion/firestore-hack-demo">View Source</a></small>
+    </footer>
+
     <script type="module">
         const collection_name = "notes_cloud_pune";
 
